--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@ $(window).scroll(function() {
   <p>In the past, I've worked on projects, both large and small, to further my knowledge
    and gain valuable experience.</p>
    <span>
-  <p>- Starting in late 2017 I begain working with the Jersey Policy Forum
+  <p>- Starting in late 2017 I began working with the Jersey Policy Forum
     to aid in the development of their new webpage as a technology associate.</p>
   <p>- I worked at the Leonidas chocolate shop. I had to package and wrap products for delivery.</p>
   <p>- I helped with parking duties at Milbrook Car-boot on sundays. This included working from 7am to 1pm to divert traffic into the correct spaces.</p>
