Added work examples

--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@ $(window).scroll(function() {
     and the internals were assembled during the event. We achieved third place in the Hackathon.</p>
   <p>- I created this website, along with other small projects on my github.</p>
   <p>- I custom built my own desktop computer, and aided in the building of three other computers.</p>
-
-
+  <span>
+  <p>For examples of my style of web-design, please check out <a href = "uhack.samueljule.info">'Going Somewhere?'</a> and the <a href = "jerseypolicyforum.org">Jersey Policy Forum website</a></p>
   </div>
 </div>
