Fixed a linking error

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,6 @@ $(window).scroll(function() {
   <p>- I created this website, along with other small projects on my github.</p>
   <p>- I custom built my own desktop computer, and aided in the building of three other computers.</p>
   <span>
-  <p>For examples of my style of web-design, please check out <a href = "uhack.samueljule.info">'Going Somewhere?'</a> and the <a href = "jerseypolicyforum.org">Jersey Policy Forum website</a></p>
+  <p>For examples of my style of web-design, please check out <a href = "http://uhack.samueljule.info">'Going Somewhere?'</a> and the <a href = "http://jerseypolicyforum.org">Jersey Policy Forum website</a></p>
   </div>
 </div>
