--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@ $(window).scroll(function() {
   <div class = "container">
     <h3>Introduction</h3>
 
-  <p>I'm Samuel Jule, a year 13 student currently studying for A-Levels at Hautlieu.
+  <p>I'm Samuel Jule, a year student studing the Digital Leadership Programme at the Digital Jersey Academy.
   As you can probably tell by the website, I'm hugely into coding, electronics ,and anything
   even remotely technology related. I'm proficient in python, CSS and HTML, and I'm learning
   Javascript to further my knowledge. I've learnt these languages by working on projects in my
@@ -98,11 +98,14 @@ $(window).scroll(function() {
 
   <h3>Education</h3>
   <p>
-  I moved to Hautlieu in year 10, having previously attended De La Salle college.</p>
+  I moved to Hautlieu in year 10, having previously attended De La Salle college.
+  After finishing my A-Level qualifications at Hautlieu, I started attending the newly formed
+  Digital Leadership Programme to further my education.</p>
 
   <span>
   <p><b>De La Salle College</b> - Years 7 to 9</p>
-  <p><b>Hautlieu School    </b> - Years 10 to Ongoing</p>
+  <p><b>Hautlieu School    </b> - Years 10 to 13</p>
+  <p><b>Digital Academy    </b> - September 2019 to Current</p>
   </span>
 
   <h3>Academic Achievements</h3>
@@ -114,6 +117,12 @@ $(window).scroll(function() {
    <p><b>AS Qualifications</b></p></p>
    <p><span>Computer studies - Design and Technology - Business Studies - Level 3 Maths</span></p></p>
 
+   <p><b>A Level Qualifications</b></p></p>
+   <p><span>Computer studies - Business Studies</span></p></p>
+
+   <p><b>Other Achievements</b></p></p>
+   <p><span>Google Ads Search Certification (Vaild from October 22, 2019)</span></p></p>
+
   <h3>Previous work</h3>
   <p>In the past, I've worked on projects, both large and small, to further my knowledge
    and gain valuable experience.</p>
@@ -123,6 +132,7 @@ $(window).scroll(function() {
   <p>- I worked at the Leonidas chocolate shop. I had to package and wrap products for delivery.</p>
   <p>- I helped with parking duties at Milbrook Car-boot on sundays. This included working from 7am to 1pm to divert traffic into the correct spaces.</p>
   <p>- I completed two weeks of work experience in the summer with TCB Consulting, a software development company.</p>
+  <p>- I aided in the development of a website for the Resilience Development Company.
   </span>
 
   <h3>Personal Projects</h3>
@@ -134,6 +144,7 @@ $(window).scroll(function() {
   <p>- I created this website, along with other small projects on my github.</p>
   <p>- I custom built my own desktop computer, and aided in the building of three other computers.</p>
   <span>
-  <p>For examples of my style of web-design, please check out <a href = "http://uhack.samueljule.info">'Going Somewhere?'</a> and the <a href = "http://jerseypolicyforum.org">Jersey Policy Forum website</a></p>
+  <p>For examples of my style of web-design, please check out my proof of concept hackathon project from 2019 <a href = "http://uhack.samueljule.info">'Going Somewhere?'</a>
+    and the <a href = "http://jerseypolicyforum.org">Jersey Policy Forum website</a></p>
   </div>
 </div>
